--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="right-header">
                 <h1 class="name">
                     Hi, I'm <span>Ahmed Mohamed Khalifa.</span>
-                    A Web Developer.
+                    A Backend  Developer.
                 </h1>
                 <p>
 
